--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="javascript.js" defer>
+    </script>
     <title>Document</title>
 </head>
 <body>
-    <script src="javascript.js">
-
-    </script>
+    <button class="btn1">Rock</button>
+    <button class="btn2">Paper</button>
+    <button class="btn3">Scrissors</button>
+    <div id="container">
+    
+    </div>
     
 </body>
 </html>
