--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -25,7 +25,9 @@
         <button class="btn1">Rock</button>
         <button class="btn2">Paper</button>
         <button class="btn3">Scrissors</button>
+        <button class="btn4">Reset</button>
     </div>
+
     <div id="container"></div>
 </div>
 
