made website fancy

--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="javascript.js" defer>
     </script>
     <title>Document</title>
 </head>
-<body>
+<body id="body">
     <div class="header">
         <p>ROCK PAPER SCISSORS</p>
         <ul class="header-links">
-            <li><a href="google.com">header link one</a></li>
-            <li><a href="google.com">header link two</a></li>
-            <li><a href="google.com">header link three</a></li>
+            <li><a href="https://github.com/DURNK">My_GitHUB</a></li>
+            <li><a href="https://www.instagram.com/denisnecc/">My_Instagram</a></li>
+            <li><a href="file:///home/denis/rkps/index.html">This_Site</a></li>
         </ul> 
     </div>
 
-   
+
    
 <div class="game">
+    <div id="fiona"></div>
     <div class="buttons">
-        <button class="btn1">Rock</button>
-        <button class="btn2">Paper</button>
-        <button class="btn3">Scrissors</button>
-        <button class="btn4">Reset</button>
+        <a href="#" class="btn1">Rock</a>
+        <a href="#" class="btn2">Paper</a>
+        <a href="#" class="btn3">Scrissors</a>
     </div>
 
     <div id="container"></div>
