--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <div class="game">
     <div id="fiona"></div>
     <div class="buttons">
-        <a href="#" class="btn1">Rock</a>
-        <a href="#" class="btn2">Paper</a>
-        <a href="#" class="btn3">Scrissors</a>
+        <a href="#" class="btn1">Rock 🪨</a>
+        <a href="#" class="btn2">Paper 🧻</a>
+        <a href="#" class="btn3">Scrissors ✂️</a>
     </div>
 
     <div id="container"></div>
